--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -64,15 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 44 µs, sys: 5 µs, total: 49 µs\n",
-      "Wall time: 52.5 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -81,18 +80,19 @@
        "4613732"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def fibonacci(n):\n",
-    "    a,b = 0,1\n",
+    "    a, b = 0, 1\n",
     "    for i in range(n):\n",
-    "        a,b = b,a+b\n",
+    "        a, b = b, a+b\n",
     "    return a\n",
-    "    \n",
+    "\n",
+    "\n",
     "def main():\n",
     "    iterator = 2\n",
     "    sum_fib = 0\n",
@@ -105,9 +105,10 @@
     "            sum_fib += fib_limit\n",
     "\n",
     "        iterator += 1\n",
-    "        \n",
+    "\n",
     "    return sum_fib\n",
-    "        \n",
+    "\n",
+    "\n",
     "%time main()"
    ]
   },
@@ -132,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 14.4 s\n"
+      "Wall time: 14 s\n"
      ]
     },
     {
@@ -148,7 +149,7 @@
        "6857.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,16 +157,18 @@
    "source": [
     "number = 600851475143\n",
     "\n",
+    "\n",
     "def is_prime(n):\n",
     "    for x in range(3, int(n ** 0.5) + 1, 2):\n",
     "        if n % x == 0:\n",
     "            return False\n",
-    "            \n",
+    "\n",
     "    return True\n",
+    "\n",
     "\n",
     "def main():\n",
     "    iterator = 1\n",
-    "    \n",
+    "\n",
     "    while True:\n",
     "        iterator += 1\n",
     "        if (number % iterator) == 0:\n",
@@ -173,10 +176,11 @@
     "\n",
     "            if is_prime(test_factor):\n",
     "                break\n",
-    "                \n",
+    "\n",
     "    return test_factor\n",
-    "                \n",
-    "%time main()           "
+    "\n",
+    "\n",
+    "%time main()"
    ]
   },
   {
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +222,7 @@
        "(6, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,20 +233,19 @@
     "max_number = 999 * 999\n",
     "min_number = 100 * 100\n",
     "\n",
-    "len(str(max_number)) , len(str(min_number))"
+    "len(str(max_number)), len(str(min_number))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.37 s, sys: 4.09 ms, total: 3.37 s\n",
-      "Wall time: 3.37 s\n"
+      "Wall time: 3.11 s\n"
      ]
     },
     {
@@ -251,7 +254,7 @@
        "906609"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,29 +262,31 @@
    "source": [
     "def generate_palindromic_by_digits(n):\n",
     "    list_palindromic = []\n",
-    "    half_digits = (n % 2) \n",
-    "    \n",
+    "    half_digits = (n % 2)\n",
+    "\n",
     "    if (n % 2) == 0:\n",
     "        half_digits = (n / 2)\n",
     "        initial_iterator = int(10**(half_digits-1))\n",
     "        last_iterator = int(10**(half_digits))\n",
-    "        \n",
+    "\n",
     "        for i in range(initial_iterator, last_iterator):\n",
     "            first_part = str(i)\n",
     "            second_part = first_part[::-1]\n",
-    "        \n",
+    "\n",
     "            palindromic_number = first_part + second_part\n",
     "            list_palindromic.append(palindromic_number)\n",
-    "        \n",
+    "\n",
     "    return list_palindromic\n",
+    "\n",
     "\n",
     "def get_factos(n):\n",
     "    factors = [n]\n",
     "    for x in range(1, int(n/2) + 1):\n",
     "        if (n % x) == 0:\n",
     "            factors.append(x)\n",
-    "            \n",
+    "\n",
     "    return factors\n",
+    "\n",
     "\n",
     "def main():\n",
     "    list_palindromic = generate_palindromic_by_digits(6)\n",
@@ -290,12 +295,13 @@
     "    for palindromic in list_palindromic:\n",
     "        palindromic = int(palindromic)\n",
     "        factors_number = get_factos(palindromic)\n",
-    "        three_digits_factors = [x for x in factors_number if len(str(x)) == 3 and len(str(int(palindromic/x))) == 3]\n",
+    "        three_digits_factors = [x for x in factors_number if len(\n",
+    "            str(x)) == 3 and len(str(int(palindromic/x))) == 3]\n",
     "        if len(three_digits_factors) == 2:\n",
     "            return (palindromic)\n",
     "\n",
-    "            \n",
-    "%time main()   "
+    "\n",
+    "%time main()"
    ]
   },
   {
@@ -324,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -335,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -359,37 +365,40 @@
    "source": [
     "from collections import Counter\n",
     "\n",
+    "\n",
     "def is_prime(n):\n",
     "    for x in range(2, int((n/2)) + 1):\n",
     "        if (n % x) == 0:\n",
     "            return False\n",
-    "            \n",
+    "\n",
     "    return True\n",
+    "\n",
     "\n",
     "def get_primes(n):\n",
     "    primes = []\n",
     "    for number in range(2, n+1):\n",
     "        if is_prime(number):\n",
     "            primes.append(number)\n",
-    "            \n",
+    "\n",
     "    return primes\n",
+    "\n",
     "\n",
     "def get_primes_factors(n):\n",
     "    primes = get_primes(n)\n",
     "    primes.reverse()\n",
     "    factor_prime = primes.pop()\n",
     "    factors = []\n",
-    "    \n",
+    "\n",
     "    while True:\n",
     "        if (n % factor_prime) == 0:\n",
     "            factors.append(factor_prime)\n",
     "            n = n/factor_prime\n",
-    "            \n",
+    "\n",
     "            if n == 1:\n",
     "                break\n",
     "        else:\n",
     "            factor_prime = primes.pop()\n",
-    "        \n",
+    "\n",
     "    return factors\n",
     "\n",
     "\n",
@@ -401,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +419,7 @@
        "232792560"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,15 +461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 73 µs, sys: 0 ns, total: 73 µs\n",
-      "Wall time: 80.3 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -469,7 +477,7 @@
        "25164150"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,17 +487,18 @@
     "    count = 0\n",
     "    for number in range(1, n+1):\n",
     "        count += number**2\n",
-    "        \n",
+    "\n",
     "    return count\n",
+    "\n",
     "\n",
     "def square_sum(n):\n",
     "    count = 0\n",
     "    for number in range(1, n+1):\n",
     "        count += number\n",
-    "        \n",
+    "\n",
     "    return count**2\n",
-    "        \n",
-    "    \n",
+    "\n",
+    "\n",
     "%time square_sum(100) - sum_squares(100)"
    ]
   },
@@ -514,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -524,8 +533,9 @@
     "    for x in range(2, int((n/2)) + 1):\n",
     "        if (n % x) == 0:\n",
     "            return False\n",
-    "            \n",
+    "\n",
     "    return True\n",
+    "\n",
     "\n",
     "def get_primes_by_position(n):\n",
     "    iterator = 2\n",
@@ -540,14 +550,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 31 s\n"
+      "Wall time: 17.5 s\n"
      ]
     },
     {
@@ -556,7 +566,7 @@
        "104743"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,13 +669,14 @@
     "from functools import reduce\n",
     "import operator\n",
     "\n",
+    "\n",
     "def main():\n",
     "    number = open(r'data/number_problem_8.txt', 'r')\n",
     "\n",
     "    str_number = ''\n",
     "\n",
     "    for line in number:\n",
-    "        str_number+= line\n",
+    "        str_number += line\n",
     "\n",
     "    str_number = str_number.replace('\\n', '')\n",
     "    max_number = 0\n",
@@ -675,9 +686,10 @@
     "        mult = reduce(operator.mul, [int(x) for x in number_iterator], 1)\n",
     "        if mult > max_number:\n",
     "            max_number = mult\n",
-    "            \n",
+    "\n",
     "    return max_number\n",
-    "                       \n",
+    "\n",
+    "\n",
     "%time main()"
    ]
   },
@@ -748,6 +760,7 @@
     "\n",
     "'''\n",
     "\n",
+    "\n",
     "def main():\n",
     "    a_values = []\n",
     "    result_values = []\n",
@@ -758,7 +771,8 @@
     "            b = 1000 - (c+a)\n",
     "\n",
     "            return (a*b*c)\n",
-    "        \n",
+    "\n",
+    "\n",
     "%time main()"
    ]
   },
@@ -807,10 +821,11 @@
     "    for x in range(3, int(n ** 0.5) + 1, 2):\n",
     "        if (n % x) == 0:\n",
     "            return False\n",
-    "            \n",
+    "\n",
     "    return True\n",
     "\n",
-    "%time (sum([x for x in range(2,2000000) if (x % 2 != 0) and (x % 3 != 0) and is_prime(x)]) + 5)"
+    "\n",
+    "%time(sum([x for x in range(2, 2000000) if (x % 2 != 0) and (x % 3 != 0) and is_prime(x)]) + 5)"
    ]
   }
  ],
@@ -831,6 +846,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
