--- a/notebooks/11-20.ipynb
+++ b/notebooks/11-20.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "19  67  48  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -629,15 +629,15 @@
     "\n",
     "for x in range(number_rows-3):\n",
     "    for i in range(number_rows-3):\n",
-    "        product_number = table.iloc[x][i] * table.iloc[x+1][i+1] * table.iloc[x+2][i+2] * table.iloc[x+3][i+3]\n",
+    "        product_number = table.iloc[x][i] * table.iloc[x +\n",
+    "                                                       1][i+1] * table.iloc[x+2][i+2] * table.iloc[x+3][i+3]\n",
     "        if product_number > max_product_diagonally_right:\n",
-    "            max_product_diagonally_right = product_number\n",
-    "        "
+    "            max_product_diagonally_right = product_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -647,14 +647,15 @@
     "\n",
     "for x in range(number_rows-3):\n",
     "    for i in range(number_rows-3):\n",
-    "        product_number = table.iloc[x][19-i] * table.iloc[x+1][19-(i+1)] * table.iloc[x+2][19-(i+2)] * table.iloc[x+3][19-(i+3)]\n",
+    "        product_number = table.iloc[x][19-i] * table.iloc[x+1][19 -\n",
+    "                                                               (i+1)] * table.iloc[x+2][19-(i+2)] * table.iloc[x+3][19-(i+3)]\n",
     "        if product_number > max_product_diagonally_left:\n",
     "            max_product_diagonally_left = product_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -663,13 +664,14 @@
        "70600674"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(max_product_up_down, max_product_lelft_right, max_product_diagonally_right, max_product_diagonally_left)"
+    "max(max_product_up_down, max_product_lelft_right,\n",
+    "    max_product_diagonally_right, max_product_diagonally_left)"
    ]
   },
   {
@@ -712,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import Counter\n",
@@ -720,11 +724,12 @@
     "from functools import reduce\n",
     "from math import sqrt\n",
     "\n",
+    "\n",
     "def is_prime(n):\n",
     "    for x in range(3, int(n ** 0.5) + 1, 2):\n",
     "        if (n % x) == 0:\n",
     "            return False\n",
-    "            \n",
+    "\n",
     "    return True\n",
     "\n",
     "\n",
@@ -733,37 +738,39 @@
     "    for number in range(2, n+1):\n",
     "        if is_prime(number):\n",
     "            primes.append(number)\n",
-    "            \n",
+    "\n",
     "    return primes\n",
+    "\n",
     "\n",
     "def get_factos(n):\n",
     "    factors = [n]\n",
     "    for x in range(1, int(sqrt(n) + 1)):\n",
     "        if (n % x) == 0:\n",
     "            factors.append(x)\n",
-    "            \n",
+    "\n",
     "    return factors\n",
+    "\n",
     "\n",
     "def get_number_factors(n):\n",
     "    primes = get_primes(int(n/2))\n",
-    "    \n",
+    "\n",
     "    if is_prime(n):\n",
     "        primes.append(n)\n",
-    "        \n",
+    "\n",
     "    max_iterator = len(primes)\n",
     "    iterator = 0\n",
     "    factors = []\n",
-    "    \n",
+    "\n",
     "    while n != 1:\n",
     "        if (n / primes[iterator]).is_integer():\n",
     "            factors.append(primes[iterator])\n",
     "            n = n/primes[iterator]\n",
     "        else:\n",
     "            iterator += 1\n",
-    "            \n",
+    "\n",
     "        if iterator == max_iterator:\n",
     "            break\n",
-    "        \n",
+    "\n",
     "    return reduce(mul, [x+1 for x in dict(Counter(factors)).values()])\n",
     "\n",
     "\n",
@@ -773,24 +780,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-b622411b6f3b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[0mnumber_of_factors\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m500\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mnumber\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenerate_triangle_number\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mposition_triangle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mnumber_of_factors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_number_factors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mposition_triangle\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-ba51c32e4250>\u001b[0m in \u001b[0;36mget_number_factors\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mget_number_factors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m     \u001b[0mprimes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_primes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mis_prime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-ba51c32e4250>\u001b[0m in \u001b[0;36mget_primes\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mprimes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mnumber\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mis_prime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m             \u001b[0mprimes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-ba51c32e4250>\u001b[0m in \u001b[0;36mis_prime\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mis_prime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m**\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#position_triangle = 100\n",
     "#number_of_factors = 2\n",
@@ -824,13 +816,16 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def gcd(a, b):\n",
-    "    while b:      \n",
+    "    while b:\n",
     "        a, b = b, a % b\n",
     "    return a\n",
+    "\n",
     "\n",
     "def lcm(a, b):\n",
     "    return a * b // gcd(a, b)\n",
@@ -924,14 +919,16 @@
     "\n",
     "number = open(r'data/number_problem_13.txt', 'r')\n",
     "\n",
+    "\n",
     "def main():\n",
     "    sum_number = 0\n",
     "    str_number = ''\n",
     "\n",
     "    for line in number:\n",
     "        sum_number += int(line)\n",
-    "    \n",
+    "\n",
     "    return str(sum_number)[:10]\n",
+    "\n",
     "\n",
     "%time main()"
    ]
@@ -1016,9 +1013,10 @@
     "        if count > max_number:\n",
     "            max_number = count\n",
     "            iterator = i\n",
-    "            \n",
+    "\n",
     "    return iterator\n",
-    "    \n",
+    "\n",
+    "\n",
     "%time main()"
    ]
   },
@@ -1084,7 +1082,7 @@
    ],
    "source": [
     "import math\n",
-    "(math.factorial(40))/ (math.factorial(20))**2"
+    "(math.factorial(40)) / (math.factorial(20))**2"
    ]
   },
   {
@@ -1134,8 +1132,9 @@
     "    sum_number = 0\n",
     "    for x in str(number):\n",
     "        sum_number += int(x)\n",
-    "    \n",
+    "\n",
     "    return sum_number\n",
+    "\n",
     "\n",
     "%time main()"
    ]
@@ -1187,18 +1186,20 @@
     "def factorial(x):\n",
     "    if x == 0:\n",
     "        return 1\n",
-    "    \n",
+    "\n",
     "    else:\n",
     "        return x*factorial(x-1)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def main():\n",
     "    number = factorial(100)\n",
-    "    \n",
+    "\n",
     "    sum_number = 0\n",
     "    for x in str(number):\n",
     "        sum_number += int(x)\n",
-    "    \n",
+    "\n",
     "    return sum_number\n",
+    "\n",
     "\n",
     "%time main()"
    ]
@@ -1221,6 +1222,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
