--- a/notebooks/21-30.ipynb
+++ b/notebooks/21-30.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def main():\n",
@@ -146,8 +148,9 @@
     "        sum_total += (sum_letter * position)\n",
     "\n",
     "        position += 1\n",
-    "        \n",
+    "\n",
     "    return sum_total\n",
+    "\n",
     "\n",
     "%time main()"
    ]
@@ -200,11 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def main(n):\n",
+    "def main():\n",
     "    fibs = [0, 1]\n",
     "    while True:\n",
     "        next_fib = fibs[-1] + fibs[-2]\n",
@@ -216,70 +221,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4782"
-      ]
-     },
-     "execution_count": 196,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(fib(1000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def fib_to(n):\n",
-    "    fibs = [0, 1]\n",
-    "    for i in range(2, n+1):\n",
-    "        fibs.append(fibs[-1] + fibs[-2])\n",
-    "        print (i)\n",
-    "    return fibs, i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "Wall time: 47.6 ms\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-175-ed0eb02e8ca0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfib_to\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "4782"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fib_to(5)\n"
+    "%time main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -308,6 +291,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
