--- a/notebooks/41-50.ipynb
+++ b/notebooks/41-50.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 11.5 ms\n"
+      "Wall time: 10.1 ms\n"
      ]
     },
     {
@@ -35,7 +35,7 @@
        "'9110846700'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,10 +44,11 @@
     "def main():\n",
     "    sum_total = 0\n",
     "\n",
-    "    for i in range(1,1001):\n",
+    "    for i in range(1, 1001):\n",
     "        sum_total += i**i\n",
     "\n",
     "    return str(sum_total)[-10:]\n",
+    "\n",
     "\n",
     "%time main()"
    ]
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "5777\n",
-      "Wall time: 5.18 s\n"
+      "Wall time: 5.34 s\n"
      ]
     }
    ],
@@ -103,13 +104,15 @@
     "    for x in range(3, int(n ** 0.5) + 1, 2):\n",
     "        if (n % x) == 0:\n",
     "            return False\n",
-    "            \n",
+    "\n",
     "    return True\n",
-    "        \n",
+    "\n",
+    "\n",
     "def get_primes_by_limit(n):\n",
     "    primes = [2]\n",
-    "    primes.extend([x for x in range(3,n,2) if is_prime(x)])\n",
+    "    primes.extend([x for x in range(3, n, 2) if is_prime(x)])\n",
     "    return primes\n",
+    "\n",
     "\n",
     "def main():\n",
     "    iterator = 9\n",
@@ -129,11 +132,12 @@
     "                    break\n",
     "\n",
     "            if test_number != iterator:\n",
-    "                print (iterator)\n",
+    "                print(iterator)\n",
     "                break\n",
     "\n",
     "        iterator += 2\n",
-    "        \n",
+    "\n",
+    "\n",
     "%time main()"
    ]
   }
@@ -155,6 +159,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
