--- a/notebooks/21-30.ipynb
+++ b/notebooks/21-30.ipynb
@@ -159,6 +159,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Lexicographic permutations\n",
+    "### Problem 24"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A permutation is an ordered arrangement of objects. For example, 3124 is one possible permutation of the digits 1, 2, 3 and 4. If all of the permutations are listed numerically or alphabetically, we call it lexicographic order. The lexicographic permutations of 0, 1 and 2 are:\n",
+    "\n",
+    "012   021   102   120   201   210\n",
+    "\n",
+    "What is the millionth lexicographic permutation of the digits 0, 1, 2, 3, 4, 5, 6, 7, 8 and 9?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2783915460'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "def get_number(index_list):\n",
+    "    numbers = [x for x in range(10)]\n",
+    "    final_number = ''\n",
+    "    for n in index_list:\n",
+    "        number = numbers.pop(n)\n",
+    "        final_number += str(number)\n",
+    "\n",
+    "    return final_number + str(numbers[0])\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    n = 9\n",
+    "\n",
+    "    fac_list = []\n",
+    "    limit = 0\n",
+    "\n",
+    "    while True:\n",
+    "        factor = limit + math.factorial(n)\n",
+    "\n",
+    "        if n == 0:\n",
+    "            break\n",
+    "\n",
+    "        if factor < 1000000:\n",
+    "            fac_list.append(n)\n",
+    "            limit = factor\n",
+    "\n",
+    "        else:\n",
+    "            n -= 1\n",
+    "\n",
+    "    number = get_number(dict(Counter(fac_list)).values())\n",
+    "    return number\n",
+    "\n",
+    "\n",
+    "%time main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1000-digit Fibonacci number\n",
     "### Problem 25"
    ]
